Fixed bug with new songs not showing

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
 .App{
   background-color: #ffe8d2;
+  padding-bottom: 1%;
 }
